--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -45,7 +45,7 @@ box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.1);
     margin-bottom: var(--mb-1);
     font-weight: var(--font-medium);
     color:  #e8e6e5;
-    -webkit-text-stroke: 0.8px #07401e;
+    -webkit-text-stroke: 0.8px #051d0e;
 }
 
 .services_button {
