--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -94,7 +94,7 @@
 }
 
 .home_img {
-    background: url(../../assets/profile.jpg);
+    background: url(../../assets/profile.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
